[update] notes/regular_expression.ipynb

--- a/notes/regular_expression.ipynb
+++ b/notes/regular_expression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7a31a35c",
    "metadata": {
     "pycharm": {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "be733506",
    "metadata": {
     "pycharm": {
@@ -306,6 +306,34 @@
    },
    "source": [
     "## 4.2 Conditional Replacement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "63428f04",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aAbBcCdD'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"aa#bb#cc#dd#\"\n",
+    "\n",
+    "rst = re.sub(r'([a-z])#', lambda m: m.group(1).upper(), s)\n",
+    "rst"
    ]
   },
   {
